--- a/nanjing_travel.html
+++ b/nanjing_travel.html
@@ -229,7 +229,7 @@
 
         <!-- 第一天行程 -->
         <div class="day-card">
-            <img src="https://webapi.amap.com/staticmap?size=600*200&paths=119.142,32.073|118.797,32.064|118.792,32.050&key=YOUR_AMAP_KEY" alt="第一天骑行路线图（示意）" style="width:100%;border-radius:12px;margin-bottom:16px;">
+            <img src="https://webapi.amap.com/staticmap?size=600*200&paths=118.712144,31.989428|118.796624,32.059344|118.784147,32.069988|118.796624,32.059344|118.787833,32.021582&key=0c72c97cf4cb7623daad0e2ef25a3188" alt="第一天骑行路线图" style="width:100%;border-radius:12px;margin-bottom:16px;">
             <h2 class="day-title">
                 <i class="fas fa-calendar-day"></i>
                 第一天：玄武湖-明城墙-夫子庙
@@ -250,7 +250,7 @@
                     <span>地址：鼓楼区中央路399号(近南京博物院)</span>
                 </div>
                 <p class="spot-desc">南京著名的早餐选择，蟹黄汤包和牛肉汤包都是招牌，汤汁丰富，皮薄馅大。开始一天的旅程前，先填饱肚子！</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=鸡鸣汤包(总店)" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=31.989428&dlon=118.712144&dname=鸡鸣汤包(总店)" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -268,7 +268,7 @@
                 </div>
                 <p class="spot-desc">玄武湖是中国最大的皇家园林湖泊，有着"金陵明珠"的美誉。湖中有五个小岛，岛上树木葱郁，长桥卧波，亭台楼阁点缀其间。沿湖骑行，风景优美。</p>
                 <p class="spot-desc"><strong>推荐：</strong>绕湖一圈约5公里，可在湖边欣赏风景，拍照留念。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=玄武湖公园" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059344&dlon=118.796624&dname=玄武湖公园" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -285,7 +285,7 @@
                     <span>地址：玄武区环湖路2号玄武湖公园内</span>
                 </div>
                 <p class="spot-desc">位于玄武湖畔的老字号小吃店，桂花夹心小元宵、艾草青团、豆沙锅饼都是不错的选择。可以买些小吃边走边吃。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=莲湖糕团店(玄武湖店)" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.021174&dlon=118.789486&dname=莲湖糕团店(玄武湖店)" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -303,7 +303,7 @@
                 </div>
                 <p class="spot-desc">南京明城墙是中国现存规模最大、保存最完整的城墙。从玄武湖出发，可以骑行至玄武门登城墙，俯瞰南京城区风光。</p>
                 <p class="spot-desc"><strong>提示：</strong>城墙不能骑行，需要将电动车停在城墙下的停车点，步行上城墙游览。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=南京明城墙-玄武门段" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.069988&dlon=118.784147&dname=南京明城墙-玄武门段" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -320,7 +320,7 @@
                     <span>地址：秦淮区夫子庙秦淮河畔</span>
                 </div>
                 <p class="spot-desc">游览城墙后，可以骑车前往夫子庙附近，品尝一碗正宗的老鸭粉丝汤，汤鲜肉嫩，是南京的特色小吃之一。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=魏记老鸭粉丝汤(夫子庙店)" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059344&dlon=118.796624&dname=魏记老鸭粉丝汤(夫子庙店)" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -338,7 +338,7 @@
                 </div>
                 <p class="spot-desc">夫子庙是南京的文化地标，秦淮河畔的风光秀丽。傍晚可以在这里漫步，感受灯火阑珊的秦淮风情。</p>
                 <p class="spot-desc"><strong>推荐：</strong>夫子庙商圈游览，可以品尝各类小吃，饱览秦淮河风光。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=夫子庙" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059344&dlon=118.796624&dname=夫子庙" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -355,7 +355,7 @@
                     <span>地址：秦淮区贡院街贡院巷1号</span>
                 </div>
                 <p class="spot-desc">在夫子庙可以选择南京大牌档享用晚餐，这里有最地道的南京菜，如盐水鸭、鸭血粉丝汤、糖醋排骨等。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=南京大牌档(夫子庙总店)" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.021582&dlon=118.787833&dname=南京大牌档(夫子庙总店)" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -364,7 +364,7 @@
 
         <!-- 第二天行程 -->
         <div class="day-card">
-            <img src="https://webapi.amap.com/staticmap?size=600*200&paths=118.797,32.064|118.862,32.064|118.792,32.050&key=YOUR_AMAP_KEY" alt="第二天骑行路线图（示意）" style="width:100%;border-radius:12px;margin-bottom:16px;">
+            <img src="https://webapi.amap.com/staticmap?size=600*200&paths=118.796624,32.059344|118.796624,32.059344|118.787631,32.011682&key=0c72c97cf4cb7623daad0e2ef25a3188" alt="第二天骑行路线图" style="width:100%;border-radius:12px;margin-bottom:16px;">
             <h2 class="day-title">
                 <i class="fas fa-calendar-day"></i>
                 第二天：紫金山-栖霞山-老门东
@@ -385,7 +385,7 @@
                     <span>地址：秦淮区中华路465号</span>
                 </div>
                 <p class="spot-desc">南京有名的早餐店，煮干丝是招牌，豆腐制成的干丝加上高汤煮制，口感鲜嫩。配上一碗馄饨，开启一天的行程。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=朱记煮干丝(总店)" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059344&dlon=118.796624&dname=朱记煮干丝(总店)" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -404,7 +404,7 @@
                 <p class="spot-desc">紫金山又名钟山，是南京最著名的山脉之一，山上风景秀丽，可以骑电动车沿山路前行，欣赏沿途风景。</p>
                 <p class="spot-desc"><strong>推荐：</strong>明孝陵、灵谷寺、中山植物园都位于紫金山，可以选择1-2个地方游览。</p>
                 <p class="spot-desc"><strong>提示：</strong>紫金山有较多上坡路段，请确保电动车电量充足。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=紫金山" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059344&dlon=118.796624&dname=紫金山" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -421,7 +421,7 @@
                     <span>地址：玄武区环陵路8号</span>
                 </div>
                 <p class="spot-desc">位于明孝陵附近的餐厅，以淮扬菜为主，松鼠鳜鱼、蒋有记扬州炒饭等都很有特色。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=马府山珍(明孝陵店)" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059344&dlon=118.796624&dname=马府山珍(明孝陵店)" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -439,7 +439,7 @@
                 </div>
                 <p class="spot-desc">从紫金山出发，骑行约7公里可到达栖霞山。栖霞山以秋季红叶闻名，山中古刹栖霞寺历史悠久，环境清幽。</p>
                 <p class="spot-desc"><strong>推荐：</strong>游览栖霞寺，欣赏山间景色，享受片刻宁静。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=栖霞山" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059344&dlon=118.796624&dname=栖霞山" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -456,7 +456,7 @@
                     <span>地址：栖霞区栖霞街8号栖霞寺内</span>
                 </div>
                 <p class="spot-desc">栖霞寺的素饼是当地特色小吃，酥脆可口，香甜不腻。游览结束后可以购买尝尝。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=栖霞寺" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059344&dlon=118.796624&dname=栖霞寺" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -474,7 +474,7 @@
                 </div>
                 <p class="spot-desc">从栖霞山回城，可以前往老门东历史街区。这里保留了南京明清时期的街巷格局和建筑风貌，是体验南京传统文化的好地方。</p>
                 <p class="spot-desc"><strong>推荐：</strong>漫步街区，品尝小吃，购买特色纪念品。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=老门东历史街区" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.011682&dlon=118.787631&dname=老门东历史街区" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -491,7 +491,7 @@
                     <span>地址：秦淮区贡院西街18号</span>
                 </div>
                 <p class="spot-desc">百年老店，晚餐可以在这里品尝地道的金陵菜，如南京盐水鸭、干菜烧肉、什锦菜等，结束美好的南京之旅。</p>
-                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&sourceApplication=travelApp&dlat=32.064&dlon=118.797&dname=奇芳阁(夫子庙店)" class="map-btn">
+                <a href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059344&dlon=118.796624&dname=奇芳阁(夫子庙店)" class="map-btn">
                     <i class="fas fa-map"></i>
                     导航前往
                 </a>
@@ -510,7 +510,7 @@
             <div class="tip-item">糖粥藕：南京传统甜品，滋补美味</div>
             <div class="tip-item">南京小面：面条细韧，汤头鲜美</div>
         </div>
-        <img src="https://webapi.amap.com/staticmap?size=600*300&markers=mid,0xFF0000,A:118.797,32.064;118.862,32.064;118.792,32.050;118.812,32.058;118.848,32.068&key=YOUR_AMAP_KEY" alt="南京本次行程所有景点分布图（示意）" style="width:100%;border-radius:12px;margin:24px 0;">
+        <img src="https://webapi.amap.com/staticmap?size=600*300&markers=mid,0xFF0000,A:118.712144,31.989428;118.796624,32.059344;118.789486,32.021174;118.784147,32.069988;118.796624,32.059344;118.787833,32.021582;118.796624,32.059344;118.796624,32.059344;118.796624,32.059344;118.787631,32.011682&key=0c72c97cf4cb7623daad0e2ef25a3188" alt="南京本次行程所有景点分布图" style="width:100%;border-radius:12px;margin:24px 0;">
     </div>
 
     <script>
