--- a/nanjing_elebike.html
+++ b/nanjing_elebike.html
@@ -92,56 +92,56 @@
             <div class="food-title"><i class="fas fa-utensils mr-2"></i>早餐：鸡鸣汤包</div>
             <div class="spot-address">鼓楼区中央路399号</div>
             <div class="spot-desc">南京经典早餐，蟹黄汤包、牛肉汤包。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059206&dlon=118.79213&dname=鸡鸣汤包"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.79213&dlat=32.059206&dname=鸡鸣汤包&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <div class="ride-info">骑行约26分钟（12.8公里）</div>
         <div class="card">
             <div class="spot-title"><i class="fas fa-water mr-2"></i>江心洲</div>
             <div class="spot-address">建邺区江心洲</div>
             <div class="spot-desc">长江生态岛，骑行拍照休憩。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.033359&dlon=118.703384&dname=江心洲"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.703384&dlat=32.033359&dname=江心洲&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <div class="ride-info">骑行约62分钟（15.5公里）</div>
         <div class="card">
             <div class="food-title"><i class="fas fa-store-alt mr-2"></i>午餐：南京大牌档（夫子庙店）</div>
             <div class="spot-address">秦淮区贡院街贡院巷1号</div>
             <div class="spot-desc">地道南京菜，盐水鸭、鸭血粉丝汤、糖醋排骨等。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.021582&dlon=118.787833&dname=南京大牌档(夫子庙总店)"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.787833&dlat=32.021582&dname=南京大牌档(夫子庙总店)&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <div class="ride-info">骑行约26分钟（12.9公里）</div>
         <div class="card">
             <div class="spot-title"><i class="fas fa-train mr-2"></i>下关西火车</div>
             <div class="spot-address">鼓楼区下关</div>
             <div class="spot-desc">历史老火车站遗址，感受南京铁路文化。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.090161&dlon=118.749637&dname=下关西火车"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.749637&dlat=32.090161&dname=下关西火车&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <div class="ride-info">骑行约16分钟（8.1公里）</div>
         <div class="card">
             <div class="food-title"><i class="fas fa-market mr-2"></i>下午茶：茶南农贸市场</div>
             <div class="spot-address">建邺区茶南路</div>
             <div class="spot-desc">本地人常逛的农贸市场，体验南京烟火气。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.030576&dlon=118.748085&dname=茶南农贸市场"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.748085&dlat=32.030576&dname=茶南农贸市场&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <div class="ride-info">骑行约121分钟（30.2公里）</div>
         <div class="card">
             <div class="spot-title"><i class="fas fa-ship mr-2"></i>中山码头轮渡</div>
             <div class="spot-address">六合区中山码头</div>
             <div class="spot-desc">乘轮渡横渡长江，体验水上交通。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.250263&dlon=118.746776&dname=中山码头轮渡"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.746776&dlat=32.250263&dname=中山码头轮渡&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <div class="ride-info">骑行约108分钟（26.9公里）</div>
         <div class="card">
             <div class="food-title"><i class="fas fa-utensils mr-2"></i>晚餐：夫子庙美食街</div>
             <div class="spot-address">秦淮区贡院街</div>
             <div class="spot-desc">夜景美食，秦淮河畔。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059344&dlon=118.796624&dname=夫子庙"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.796624&dlat=32.059344&dname=夫子庙&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <!-- 夜宵卡片插入到第二天最后 -->
         <div class="card">
             <div class="food-title"><i class="fas fa-utensils mr-2"></i>夜宵：烧烤小龙虾</div>
             <div class="spot-address">推荐：夫子庙/新街口/湖南路等夜市</div>
             <div class="spot-desc">南京夜宵必吃，烧烤+小龙虾，深夜美味。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059344&dlon=118.796624&dname=南京夜宵美食街"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.796624&dlat=32.059344&dname=南京夜宵美食街&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <!-- 第二天路线图 -->
         <div class="my-4">
@@ -151,35 +151,35 @@
             <div class="food-title"><i class="fas fa-utensils mr-2"></i>早餐：科巷美食市集</div>
             <div class="spot-address">秦淮区科巷</div>
             <div class="spot-desc">南京最有名的美食街之一，各类小吃应有尽有。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.039085&dlon=118.796252&dname=科巷美食市集"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.796252&dlat=32.039085&dname=科巷美食市集&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <div class="ride-info">骑行约27分钟（6.7公里）</div>
         <div class="card">
             <div class="spot-title"><i class="fas fa-tree mr-2"></i>玄武湖</div>
             <div class="spot-address">玄武区玄武巷1号</div>
             <div class="spot-desc">南京著名湖泊，环湖骑行，风景优美。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.072217&dlon=118.801541&dname=玄武湖"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.801541&dlat=32.072217&dname=玄武湖&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <div class="ride-info">骑行约27分钟（6.7公里）</div>
         <div class="card">
             <div class="food-title"><i class="fas fa-utensils mr-2"></i>午餐：玻璃栈道附近美食</div>
             <div class="spot-address">南京市区</div>
             <div class="spot-desc">高空玻璃栈道，俯瞰城市美景，体验刺激。可选择附近餐厅用餐。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059344&dlon=118.796624&dname=玻璃栈道"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.796624&dlat=32.059344&dname=玻璃栈道&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <div class="ride-info">骑行约18分钟（4.5公里）</div>
         <div class="card">
             <div class="spot-title"><i class="fas fa-store mr-2"></i>老门东历史街区</div>
             <div class="spot-address">秦淮区白下路</div>
             <div class="spot-desc">明清风格街区，体验南京传统文化。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.011682&dlon=118.787631&dname=老门东历史街区"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.787631&dlat=32.011682&dname=老门东历史街区&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <div class="ride-info">骑行约23分钟（5.6公里）</div>
         <div class="card">
             <div class="food-title"><i class="fas fa-utensils mr-2"></i>晚餐：奇芳阁（金陵菜）</div>
             <div class="spot-address">秦淮区贡院西街18号</div>
             <div class="spot-desc">百年老店，品尝地道金陵菜。</div>
-            <a class="nav-btn" href="amapuri://openFeature?featureName=OnRideNavi&rideType=elebike&dlat=32.059206&dlon=118.79213&dname=奇芳阁"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
+            <a class="nav-btn" href="amapuri://route/plan/?sname=我的位置&dlon=118.79213&dlat=32.059206&dname=奇芳阁&t=3"><i class="fas fa-location-arrow mr-2"></i>电动车导航</a>
         </div>
         <!-- 底部景点分布图 -->
         <div class="my-8">
