--- a/qa_nanjing_elebike.html
+++ b/qa_nanjing_elebike.html
@@ -191,11 +191,12 @@
     <!-- Day 1 -->
     <div class="day-card">
         <div class="day-title"><i class="fas fa-calendar-day"></i>第一天：玄武湖-鸡鸣寺-总统府-南京大排档</div>
-        <img src="./imgs/day1_overview.jpg" alt="第一天路线概览" style="width:100%;border-radius:12px;margin-bottom:16px;">
+        <img src="https://web-framwork-sh.oss-cn-hangzhou.aliyuncs.com/NJ_travel_imgs/day1_overview.jpg" alt="第一天路线概览" style="width:100%;border-radius:12px;margin-bottom:16px;">
         <div class="spot-card">
             <div class="food-title"><i class="fas fa-utensils"></i> 早餐：锁金村鸭血粉丝汤</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>锁金村</div>
             <div class="spot-desc">南京特色小吃，汤鲜味美，开启元气一天。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议用餐：30分钟</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.812345,32.065432,锁金村鸭血粉丝汤&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约12分钟（3.2公里）</div>
@@ -203,6 +204,7 @@
             <div class="spot-title"><i class="fas fa-tree"></i> 玄武湖</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>玄武区玄武巷1号</div>
             <div class="spot-desc">南京著名湖泊，环湖骑行，风景优美。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1.5小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.801541,32.072217,玄武湖&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约8分钟（2.1公里）</div>
@@ -210,6 +212,7 @@
             <div class="spot-title"><i class="fas fa-pagelines"></i> 鸡鸣寺</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>玄武区鸡鸣寺路1号</div>
             <div class="spot-desc">南京最美赏樱地，古寺幽静，春日必打卡。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.808,32.064,鸡鸣寺&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约15分钟（4.5公里）</div>
@@ -217,6 +220,7 @@
             <div class="spot-title"><i class="fas fa-landmark"></i> 总统府</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>玄武区长江路292号</div>
             <div class="spot-desc">中国近代史重要地标，民国风情建筑群。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.792,32.048,总统府&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约18分钟（5.2公里）</div>
@@ -224,6 +228,7 @@
             <div class="food-title"><i class="fas fa-utensils"></i> 晚餐：南京大排档</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>夫子庙/新街口等</div>
             <div class="spot-desc">地道南京菜，盐水鸭、鸭血粉丝汤、糖醋排骨等。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议用餐：40分钟</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.787833,32.021582,南京大牌档(夫子庙总店)&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
     </div>
@@ -235,6 +240,7 @@
             <div class="food-title"><i class="fas fa-utensils"></i> 早餐：科巷美食市集</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>秦淮区科巷</div>
             <div class="spot-desc">南京本地人最爱的早餐市集，各类小吃丰富。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议用餐：30分钟</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.792,32.038,科巷美食市集&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约10分钟（2.5公里）</div>
@@ -242,6 +248,7 @@
             <div class="spot-title"><i class="fas fa-water"></i> 秦淮河</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>秦淮区秦淮河畔</div>
             <div class="spot-desc">南京母亲河，夜游灯会、古色古香。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.792,32.028,秦淮河&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约6分钟（1.8公里）</div>
@@ -249,6 +256,7 @@
             <div class="spot-title"><i class="fas fa-archway"></i> 夫子庙</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>秦淮区贡院街夫子庙</div>
             <div class="spot-desc">南京文化地标，秦淮风情，夜市美食。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.792,32.022,夫子庙&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约20分钟（6.2公里）</div>
@@ -256,6 +264,7 @@
             <div class="spot-title"><i class="fas fa-mountain"></i> 玻璃栈道</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>南京市区</div>
             <div class="spot-desc">高空玻璃栈道，俯瞰城市美景，体验刺激。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.796624,32.059344,玻璃栈道&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
     </div>
@@ -267,6 +276,7 @@
             <div class="food-title"><i class="fas fa-utensils"></i> 早餐：南京农业大学夜市</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>玄武区卫岗1号</div>
             <div class="spot-desc">学生美食，夜市丰富，适合夜宵。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议用餐：40分钟</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.841573,32.029038,南京农业大学夜市&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约30分钟（9.5公里）</div>
@@ -274,6 +284,7 @@
             <div class="spot-title"><i class="fas fa-water"></i> 江心洲</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>建邺区江心洲</div>
             <div class="spot-desc">长江生态岛，骑行拍照休憩。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.703384,32.033359,江心洲&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约18分钟（5.8公里）</div>
@@ -281,6 +292,7 @@
             <div class="spot-title"><i class="fas fa-leaf"></i> 鱼嘴湿地公园</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>建邺区鱼嘴路</div>
             <div class="spot-desc">长江与秦淮新河交汇处，湿地风光，观鸟胜地。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.670,32.012,鱼嘴湿地公园&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
     </div>
@@ -292,6 +304,7 @@
             <div class="food-title"><i class="fas fa-utensils"></i> 早餐：茶南农贸市场</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>建邺区茶南路</div>
             <div class="spot-desc">本地人常逛的农贸市场，体验南京烟火气。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议用餐：30分钟</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.748085,32.030576,茶南农贸市场&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约22分钟（7.2公里）</div>
@@ -299,6 +312,7 @@
             <div class="spot-title"><i class="fas fa-train"></i> 下关西火车</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>鼓楼区下关</div>
             <div class="spot-desc">历史老火车站遗址，感受南京铁路文化。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.749637,32.090161,下关西火车&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约16分钟（5.1公里）</div>
@@ -306,6 +320,7 @@
             <div class="spot-title"><i class="fas fa-ship"></i> 中山码头轮渡</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>六合区中山码头</div>
             <div class="spot-desc">乘轮渡横渡长江，体验水上交通。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：30分钟</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.746776,32.250263,中山码头轮渡&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约30分钟（10.8公里）</div>
@@ -313,6 +328,7 @@
             <div class="food-title"><i class="fas fa-utensils"></i> 晚餐：龙虾烧烤</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>夫子庙/湖南路/夜市</div>
             <div class="spot-desc">南京夜宵必吃，烧烤+小龙虾，深夜美味。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议用餐：40分钟</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.796624,32.059344,南京夜宵美食街&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
     </div>
@@ -324,6 +340,7 @@
             <div class="food-title"><i class="fas fa-utensils"></i> 早餐：南京大排档</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>夫子庙/新街口等</div>
             <div class="spot-desc">地道南京菜，盐水鸭、鸭血粉丝汤、糖醋排骨等。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议用餐：40分钟</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.787833,32.021582,南京大牌档(夫子庙总店)&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约25分钟（8.2公里）</div>
@@ -331,6 +348,7 @@
             <div class="spot-title"><i class="fas fa-mountain"></i> 紫金山</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>玄武区紫金山山顶路7号</div>
             <div class="spot-desc">南京最著名的山脉之一，山上风景秀丽。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1.5小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.796624,32.059344,紫金山&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约12分钟（3.6公里）</div>
@@ -338,6 +356,7 @@
             <div class="spot-title"><i class="fas fa-monument"></i> 中山陵</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>玄武区石象路7号</div>
             <div class="spot-desc">中国近代伟人孙中山先生陵寝，庄严肃穆。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.852,32.064,中山陵&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约30分钟（10.5公里）</div>
@@ -345,6 +364,7 @@
             <div class="spot-title"><i class="fas fa-mountain"></i> 牛首山</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>江宁区牛首大道18号</div>
             <div class="spot-desc">南京南部著名佛教胜地，山水环绕，风景秀丽。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.800,31.950,牛首山&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约18分钟（5.2公里）</div>
@@ -352,6 +372,7 @@
             <div class="spot-title"><i class="fas fa-road"></i> 颐和路</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>鼓楼区颐和路</div>
             <div class="spot-desc">南京最美街区，民国风情，梧桐成荫，适合拍照漫步。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.769,32.070,颐和路&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
         <div class="ride-info">骑行约20分钟（6.8公里）</div>
@@ -359,12 +380,13 @@
             <div class="spot-title"><i class="fas fa-university"></i> 南京博物馆</div>
             <div class="spot-address"><i class="fas fa-map-marker-alt"></i>玄武区中山东路321号</div>
             <div class="spot-desc">中国三大博物馆之一，馆藏丰富。</div>
+            <div style="color:#239f98;font-size:0.98rem;margin:6px 0 0 0;">建议游览：1小时</div>
             <a class="nav-btn" href="https://uri.amap.com/navigation?to=118.812,32.048,南京博物馆&mode=ride" target="_blank"><i class="fas fa-location-arrow"></i>高德App导航</a>
         </div>
     </div>
     <div class="map-section">
         <h3 style="color:var(--primary-color);margin-bottom:12px;">全部景点分布</h3>
-        <img src="./imgs/nanjing_spots_overview.jpg" alt="景点分布图">
+        <img src="https://web-framwork-sh.oss-cn-hangzhou.aliyuncs.com/NJ_travel_imgs/nanjing_spots_overview.jpg" alt="景点分布图" style="display:block;margin:0 auto;border-radius:18px;max-width:700px;width:100%;border:2px solid #eaeaea;box-sizing:border-box;">
     </div>
 </body>
 </html> 
